<resources>
    <string name="app_name">Visual Position</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get A place</string>
    <string name="pick_place">Choose a place</string>
    <string name="title_activity_home">Visual Business Locator</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Business Services</string>
    <string name="nav_header_subtitle">Categories</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Help &amp; Support</string>

    <!--string name="Categories">CATEGORIES</string-->

    <string name="HOME">Business Locator </string>
    <string name="gov">Government Services</string>
    <string name="med">Medical Services</string>
    <string name="beauty">Beauty Spas</string>
    <string name="ent">Electronic Repair</string>
    <string name="edu">Education</string>
    <string name="banking">Banking Sector</string>
    <string name="cloth">Clothing stores</string>
    <string name="supermarkets">Supermarkets</string>
    <string name="hardware">Hardwares</string>
    <string name="agrov">Agrovets</string>
    <string name="elec">Electronic Stores</string>
    <string name="repair">Electronic Repair</string>
    <string name="eat">Food Restaurants</string>

    <string name="share">Share Application</string>
    <string name="conta">Contact Us</string>
    <string name="intro">
       Eldoret is a principal town in the Rift Valley region of Kenya and serves as the
        capital of Uasin Gishu County. The town is colloquially known as
        "'Sisibo'". As per the 2019 Kenya Population and Housing Census,
        Eldoret is the fifth most populated urban area in the country after Nairobi, Mombasa, Nakuru and Ruiru.[3] Lying south of the Cherangani Hills,
        the local elevation varies from about 2100 metres at the airport to more than 2700 metres in nearby areas (7000–9000 feet).
        The population was 289,380 in the 2009 census, and it is currently the fastest growing town in Kenya with 475,716
        inhabitants according to 2019 national census.
    </string>
<!--LOGIN-->
    <string name="Login_name">Google Login</string>
    <string name="Login_settings">Settings</string>

    <string name="hint_signed_out">Signed out</string>
    <string name="hint_signed_in_as">Signed in as: %s</string>

    <string name="hint_sign_out">Sign Out</string>
    <string name="hint_disconnect">Disconnect</string>
    <string name="hint_refresh_token">Get Fresh Token</string>
    <string name="get_drections">Directions</string>
    <string name="gname1">The core objective of the Huduma Kenya Programme is to turn around public service delivery to ensure citizens accessibility to efficient Government services.</string>
    <string name="kra">The Kenya Revenue Authority was established by an Act of Parliament, Chapter 469 of the laws of Kenya, KRA is charged with collecting revenue on behalf of the government of Kenya.</string>
    <string name="land">Manages public land on behalf of the national and county governments, initiates investigations into present or historical land injustices and recommends appropriate redress, and monitors and have oversight responsibilities over land use planning throughout the country.</string>


    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="reg_success_message">Registration Successful</string>
    <string name="log_success_message">Welcome Back</string>
    <string name="text_not_member">Don\'t have an Account? Create one</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Match</string>
    <string name="error_valid_email_password">Incorrect Email or Password</string>
    <string name="hint_name">Name</string>
    <string name="details">Details</string>
</resources>
